# auth0-ai-python

./: .gitignore  README.md
examples/a2a/: .dockerignore  .env.example  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  langgraph.json  pyproject.toml
examples/a2a/a2a/: types.py
examples/a2a/a2a/client/: __init__.py  client.py  errors.py
examples/a2a/a2a/server/: __init__.py  agent_executor.py  app.py  errors.py  request_handler.py  server.py  streaming_response_queue.py  task_store.py
examples/a2a/a2a/server/agent_execution/: __init__.py  agent_executor.py  base_agent_executor.py
examples/a2a/a2a/server/events/: __init__.py  event_consumer.py  event_queue.py
examples/a2a/a2a/server/request_handlers/: __init__.py  default_request_handler.py  request_handler.py  response_helpers.py
examples/a2a/a2a/server/tasks/: __init__.py  inmemory_task_store.py  task_manager.py  task_store.py
examples/a2a/a2a/utils/: __init__.py  helpers.py
examples/a2a/bank_agent/: __init__.py  agent.py  host_agent.py  prompt.py  remote_agent_connection.py
examples/a2a/certs/: bank_agent_private_key.pem
examples/a2a/common/: a2a_helpers.py  jwt_auth.py  message.py
examples/a2a/common/client/: __init__.py  card_resolver.py
examples/a2a/common/server/: __init__.py  server.py  task_manager.py  utils.py
examples/a2a/common/utils/: in_memory_cache.py
examples/a2a/hr_agent/: Dockerfile  __main__.py  agent.py  agent_executor.py  ciba_resumer.py  helpers.py  prompt.py  task_manager.py
examples/a2a/hr_api/: Dockerfile  server.py
examples/async-authorization/: README.md
examples/async-authorization/langchain-examples/: .env.example  README.md  langgraph.json
examples/async-authorization/langchain-examples/src/: cli.py
examples/async-authorization/langchain-examples/src/agents/: conditional_trade.py
examples/async-authorization/langchain-examples/src/services/: resumer.py  scheduler.py
examples/async-authorization/llama-index-examples/: .env.example  README.md  pyproject.toml
examples/async-authorization/llama-index-examples/scripts/: api.py
examples/async-authorization/llama-index-examples/src/agents/: agent.py  memory.py
examples/async-authorization/llama-index-examples/src/app/: app.py
examples/async-authorization/llama-index-examples/src/auth0/: auth.py  auth0_ai.py  routes.py  (+1 more)
examples/async-authorization/sample-api/: app.py
examples/async-user-confirmation/langchain-examples/: .env.example  README.md  langgraph.json  pyproject.toml
examples/async-user-confirmation/langchain-examples/src/: cli.py
examples/async-user-confirmation/langchain-examples/src/agents/: agent.py  ciba.py  conditional_trade.py
examples/async-user-confirmation/langchain-examples/src/agents/tools/: conditional_trade.py  trade.py
examples/async-user-confirmation/langchain-examples/src/services/: resumer.py  scheduler.py
examples/async-user-confirmation/llama-index-examples/: .env.example  README.md  pyproject.toml
examples/async-user-confirmation/llama-index-examples/scripts/: start.py
examples/async-user-confirmation/llama-index-examples/src/agents/: agent.py
examples/async-user-confirmation/llama-index-examples/src/agents/tools/: trade.py
examples/async-user-confirmation/llama-index-examples/src/app/: app.py
examples/async-user-confirmation/llama-index-examples/src/app/templates/: index.html
examples/async-user-confirmation/llama-index-examples/src/auth0/: auth0_ai.py
examples/async-user-confirmation/llama-index-examples/src/tools/: trade.py
examples/async-user-confirmation/sample-api/: app.py  pyproject.toml
examples/authorization-for-rag/langchain-examples/: README.md  pyproject.toml
examples/authorization-for-rag/langchain-examples/langchain_rag/: main.py
examples/authorization-for-rag/langchain-examples/scripts/: fga_init.py
examples/authorization-for-rag/llama-index-examples/: README.md  pyproject.toml
examples/authorization-for-rag/llama-index-examples/llama_index_rag/: main.py  retriever.py
examples/authorization-for-tools/langchain-examples/: .env.example  README.md  pyproject.toml
examples/authorization-for-tools/langchain-examples/scripts/: fga_init.py
examples/authorization-for-tools/langchain-examples/src/: main.py
examples/authorization-for-tools/langchain-examples/src/agents/: agent.py
examples/authorization-for-tools/langchain-examples/src/agents/tools/: buy.py
examples/authorization-for-tools/llama-index-examples/: .env.example  README.md  pyproject.toml
examples/authorization-for-tools/llama-index-examples/src/: context.py  main.py
examples/authorization-for-tools/llama-index-examples/src/tools/: buy.py
examples/calling-apis/: README.md
examples/calling-apis/langchain-examples/: .env.example  README.md  pyproject.toml
examples/calling-apis/langchain-examples/scripts/: langgraph_up.py
examples/calling-apis/langchain-examples/src/: authenticate.py  main.py
examples/calling-apis/langchain-examples/src/agents/: agent.py
examples/calling-apis/langchain-examples/src/agents/tools/: check_country_holiday.py  check_user_calendar.py  list_channels.py  list_repositories.py
examples/calling-apis/langchain-examples/src/app/: app.py
examples/calling-apis/langchain-examples/src/app/templates/: index.html
examples/calling-apis/langchain-examples/src/auth0/: auth.py  auth0_ai.py
examples/calling-apis/langchain-fastapi-py/backend/: pyproject.toml
examples/calling-apis/langchain-fastapi-py/frontend/: auth0-ai-0.0.0.tgz
examples/calling-apis/llama-index-examples/: .env.example  README.md  pyproject.toml
examples/calling-apis/llama-index-examples/src/agents/: agent.py
examples/calling-apis/llama-index-examples/src/agents/tools/: check_user_calendar.py  list_channels.py  list_repositories.py
examples/calling-apis/llama-index-examples/src/app/: app.py
examples/calling-apis/llama-index-examples/src/app/templates/: index.html
examples/calling-apis/llama-index-examples/src/auth0/: auth0_ai.py
examples/calling-apis/llama-index-examples/src/tools/: check_country_holiday.py  check_user_calendar.py
(+9 files in other folders)
