[tool.poetry]
name = "langchain-examples"
version = "0.1.0"
description = ""
authors = ["Auth0 <support@auth0.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.scripts]
api = "src.cli:start_api"
scheduler = "src.cli:start_scheduler"
resumer = "src.cli:start_resumer"
langgraph_up = "src.cli:start_langgraph_dev"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
apscheduler = "^3.10.1"
httpx = "^0.28.1"
python-dotenv = "^1.0.1"
pydantic = "^2.10.6"
nanoid = "^2.0.0"
langchain-openai = "^0.3.12"
langchain = "^0.3.23"
langchain-core = "^0.3.51"
langgraph = "^0.3.30"
langgraph-cli = "^0.2.3"
langgraph-api = "^0.1.5"
langgraph-runtime-inmem = "^0.0.4"
auth0-ai-langchain = { path = "../../../packages/auth0-ai-langchain", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
