[tool.poetry]
name = "langchain-examples"
version = "0.1.0"
description = ""
authors = ["Auth0 <support@auth0.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.scripts]
api = "src.cli:start_api"
scheduler = "src.cli:start_scheduler"
resumer = "src.cli:start_resumer"
langgraph_up = "src.cli:start_langgraph_dev"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.1"
apscheduler = "^3.11.0"
httpx = "^0.28.1"
python-dotenv = "^1.1.1"
pydantic = "^2.11.7"
nanoid = "^2.0.0"
langchain = "^0.3.26"
langchain-core = "^0.3.69"
langchain-openai = "^0.3.28"
langgraph = "^0.5.3"
langgraph-cli = "^0.3.5"
langgraph-api = "^0.2.96"
langgraph-runtime-inmem = "^0.6.0"
auth0-ai-langchain = { path = "../../../packages/auth0-ai-langchain", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
