[tool.poetry]
name = "sample-api"
version = "0.1.0"
description = ""
authors = []
readme = ""
packages = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
flask-cors = "^5.0.1"
python-dotenv = "^1.0.1"
python-jose = "^3.4.0"
six = "^1.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"