[tool.poetry]
name = "sample-api"
version = "0.1.0"
description = ""
authors = ["Auth0 <support@auth0.com>"]
readme = ""
packages = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.1"
flask-cors = "^5.0.1"
python-dotenv = "^1.1.1"
python-jose = "^3.5.0"
six = "^1.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
