[tool.poetry]
name = "langchain-examples"
version = "0.1.0"
description = ""
authors = ["Auth0 <support@auth0.com>"]
readme = "README.md"
packages = [{ include = "langchain_rag" }]

[tool.poetry.scripts]
fga_init = "scripts.fga_init:main"
start = "langchain_rag.main:main"

[tool.poetry.dependencies]
python = "^3.11"
faiss-cpu = "^1.11.0.post1"
python-dotenv = "^1.1.1"
openfga-sdk = "^0.9.5"
termcolor = "^2.5.0"
langchain = "^0.3.26"
langchain-openai = "^0.3.28"
langchain-community = "^0.3.27"
auth0-ai-langchain = { path = "../../../packages/auth0-ai-langchain", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
