[tool.poetry]
name = "llama-index-examples"
version = "0.1.0"
description = ""
authors = ["Auth0 <support@auth0.com>"]
readme = "README.md"
packages = [{ include = "llama_index_rag" }]

[tool.poetry.scripts]
fga_init = "scripts.fga_init:main"
start = "llama_index_rag.main:main"

[tool.poetry.dependencies]
python = "^3.11"
llama-index = "^0.12.49"
termcolor = "^2.5.0"
python-dotenv = "^1.1.1"
auth0-ai-llamaindex = { path = "../../../packages/auth0-ai-llamaindex", develop = true }
openfga-sdk = "^0.9.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
