[tool.poetry]
name = "langchain-examples"
version = "0.1.0"
description = ""
authors = ["Auth0 <support@auth0.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.scripts]
fga_init = "scripts.fga_init:main"
langgraph_up = "scripts.langgraph_up:main"
start = "src.main:main"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
questionary = "^2.1.0"
langchain-core = "^0.3.59"
langchain-openai = "^0.3.16"
langgraph = "^0.4.3"
langgraph-cli = "^0.2.8"
langgraph-api = "^0.2.19"
langgraph-runtime-inmem = "^0.0.11"
auth0-ai-langchain = { path = "../../../packages/auth0-ai-langchain", develop = true }

[tool.poetry.group.dev.dependencies]
openfga-sdk = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
