[tool.poetry]
name = "langchain-examples"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.scripts]
fga_init = "scripts.fga_init:main"
start = "src.main:main"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
langchain-auth0-ai = {path = "../../../packages/langchain-auth0-ai", develop = true}
questionary = "^2.1.0"
llama-index-agent-openai = "^0.4.6"

[tool.poetry.group.dev.dependencies]
openfga-sdk = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
