[tool.poetry]
name = "langchain-examples"
version = "0.1.0"
description = ""
authors = ["Auth0 <support@auth0.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.scripts]
langgraph_up = "scripts.langgraph_up:main"
start = "scripts.start:main"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
auth0-ai-langchain = { path = "../../../packages/auth0-ai-langchain", develop = true }
auth0-fastapi = "^1.0.0b4"
langchain-core = "^0.3.59"
langchain-openai = "^0.3.16"
langgraph = "^0.4.3"
langgraph-cli = "^0.2.8"
langgraph-api = "^0.2.19"
langgraph-runtime-inmem = "^0.0.10"
requests = "^2.32.3"
hypercorn = "^0.17.3"
fastapi = "^0.115.12"
jinja2 = "^3.1.6"
pygithub = "^2.6.1"
slack-sdk = "^3.35.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
