[tool.poetry]
name = "langchain-examples"
version = "0.1.0"
description = ""
authors = ["Auth0 <support@auth0.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.scripts]
langgraph_up = "scripts.langgraph_up:main"
start = "scripts.start:main"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.1.1"
auth0-ai-langchain = { path = "../../../packages/auth0-ai-langchain", develop = true }
auth0-fastapi = "^1.0.0b4"
langchain-core = "^0.3.69"
langchain-openai = "^0.3.26"
langgraph = "^0.5.3"
langgraph-cli = "^0.3.5"
langgraph-api = "^0.2.96"
langgraph-runtime-inmem = "^0.6.0"
requests = "^2.32.4"
hypercorn = "^0.17.3"
fastapi = "^0.115.14"
jinja2 = "^3.1.6"
pygithub = "^2.6.1"
slack-sdk = "^3.36.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
